--- a/CSS/MAINSTYLE/style.css
+++ b/CSS/MAINSTYLE/style.css
@@ -16,7 +16,7 @@ body{
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-size:cover;
-  background-image:url(../../IMG/fundos/Captura\ de\ Tela\ \(9\).png);
+  background-image:url(../../IMG/fundos/stockvault-red-yellow-black-background-image277011.jpg);
 }
 
 header{
